# gcloud-libcurl-example

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: FindPlantUML.cmake
doc/: GCP_Avro_Schema.json  gcloud-libcurl-example.service  gcloud-libcurl-example.timer  sequence.uml
include/: alloc.h  base64url.h  dataSource.h  htmlClient.h  javaWebToken.h  messages.h  readJSON.h  session.h
keys/: SAMPLE_Config.json
src/: alloc.c  base64url.c  dataSource.c  htmlClient.c  javaWebToken.c  main.c  readJSON.c
